--- a/index.html
+++ b/index.html
@@ -5,17 +5,113 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Football</title>
+    <!---------------
+        CSS Style
+    ----------------->
+    <link rel="stylesheet" href="Stylesheet/style.css">
+
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/fafb49b89b.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <header>
-        <section>
-            <div>
-                <h1>Conmebol
+    <main>
+        <section class="first-section">
+            <div class="half-width">
+                <h1 class="header-h1">
+                    Conmebol
                     Copa America 
                     2021
-                    </h1>
+                </h1>
+                <p class="first-section-p">
+                    Watch Live
+                    <i class="fas fa-arrow-right"></i>
+                </p>
+            </div>
+            <!-- First-section image area -->
+            <div class="half-width">
+                <img src="resources/images/banner.png" alt="Guy kicking in football">
             </div>
         </section>
-    </header>
+
+        <!-- Second Section  -->
+
+        <section>
+            <div class="player-cards">
+                <div class="player-card"><img src="resources/images/players/player-1.png" alt="">
+                    <h2 class="player-card-h"> Neymar jr</h2>
+                    <p class="player-card-p">
+                        Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
+                    </p>
+                </div>
+                <div class="player-card"><img src="resources/images/players/player-2.png" alt="">
+                    <h2 class="player-card-h"> Lionel Messi </h2>
+                    <p class="player-card-p">
+                        Luis Lionel Andrés Messi; also known as Leo Messi, is an Argentine professional footballer who plays as a forward or an attacking midfielder and captains the Argentina national team.
+                    </p>
+                </div>
+                <div class="player-card"><img src="resources/images/players/player-3.png" alt="">
+                    <h2 class="player-card-h"> Cristiano Ronaldo</h2>
+                    <p class="player-card-p">
+                        Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.
+                    </p>
+                </div>
+                <div class="player-card"><img src="resources/images/players/player-4.png" alt="">
+                    <h2 class="player-card-h"> Paulo Dybala</h2>
+                    <p class="player-card-p">
+                        Paulo Exequiel Dybala is an Argentine professional footballer who plays as a forward for Serie A club Juventus and the Argentina national team.
+                    </p>
+                </div>
+                <div class="player-card"><img src="resources/images/players/player-5.png" alt="">
+                    <h2 class="player-card-h"> Mesut Özil</h2>
+                    <p class="player-card-p">
+                        Mesut Özil is a German professional footballer who plays as an attacking midfielder for Süper Lig club Fenerbahçe. Nicknamed "The Assist King", Özil is known for his technical skills, creativity, agility, and finesse.
+                    </p>
+                </div>
+                <div class="player-card"><img src="resources/images/players/player-6.png" alt="">
+                    <h2 class="player-card-h"> Mauro Icardi</h2>
+                    <p class="player-card-p">
+                        Mauro Emanuel Icardi is an Argentine professional footballer who plays as a striker for Ligue 1 club Paris Saint-Germain and the Argentina national team.
+                    </p>
+                </div>
+                <div class="player-card"><img src="resources/images/players/player-7.png" alt="">
+                    <h2 class="player-card-h"> Ángel Di María</h2>
+                    <p class="player-card-p">
+                        Ángel Fabián Di María is an Argentine professional footballer who plays for Ligue 1 club Paris Saint-Germain and the Argentina national team. He can play as either a winger or attacking midfielder.
+                    </p>
+                </div>
+                <div class="player-card"><img src="resources/images/players/player-8.png" alt="">
+                    <h2 class="player-card-h"> Kylian Mbappé </h2>
+                    <p class="player-card-p">
+                        Kylian Mbappé Lottin is a French professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the France national team.
+                    </p>
+                </div>
+                <div class="player-card"><img src="resources/images/players/player-9.png" alt="">
+                    <h2 class="player-card-h"> Mohamed Salah</h2>
+                    <p class="player-card-p">
+                        Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer who plays as a forward for Premier League club Liverpool and captains the Egypt national team.
+                    </p>
+                </div>
+                <div class="player-card"><img src="resources/images/players/player-10.png" alt="">
+                    <h2 class="player-card-h"> Harry Kane</h2>
+                    <p class="player-card-p">
+                        Harry Edward Kane MBE is an English professional footballer who plays as a striker for Premier League club Tottenham Hotspur and captains the England national team.
+                    </p>
+                </div>
+                <div class="player-card"><img src="resources/images/players/player-11.png" alt="">
+                    <h2 class="player-card-h"> Kevin De Bruyne</h2>
+                    <p class="player-card-p">
+                        Kevin De Bruyne is a Belgian professional footballer who plays as a midfielder for Premier League club Manchester City, where he is vice-captain, and the Belgium national team.
+                    </p>
+                </div>
+                <div class="player-card"><img src="resources/images/players/player-12.png" alt="">
+                    <h2 class="player-card-h"> Philippe Coutinho </h2>
+                    <p class="player-card-p">
+                        Philippe Coutinho Correia is a Brazilian professional footballer who plays as an attacking midfielder or winger for Spanish club Barcelona and the Brazil national team.
+                    </p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
