--- a/index.html
+++ b/index.html
@@ -15,103 +15,209 @@
 </head>
 
 <body>
-    <main>
-        <section class="first-section">
-            <div class="half-width">
-                <h1 class="header-h1">
+   
+        <header>
+            <section class="first-section">
+                <div class="half-width">
+                 <h1 class="header-h1">
                     Conmebol
                     Copa America 
                     2021
-                </h1>
-                <p class="first-section-p">
+                 </h1>
+                 <p class="first-section-p">
                     Watch Live
                     <i class="fas fa-arrow-right"></i>
-                </p>
-            </div>
+                 </p>
+                </div>
             <!-- First-section image area -->
-            <div class="half-width">
-                <img src="resources/images/banner.png" alt="Guy kicking in football">
-            </div>
-        </section>
+                 <div class="half-width">
+                 <img src="resources/images/banner.png" alt="Guy kicking in football">
+                 </div>
+             </section>
+        </header>
 
-        <!-- Second Section  -->
-
-        <section>
+            <!-- Second Section  -->
+     <main>
+        <section class="second-section">
             <div class="player-cards">
-                <div class="player-card"><img src="resources/images/players/player-1.png" alt="">
-                    <h2 class="player-card-h"> Neymar jr</h2>
-                    <p class="player-card-p">
-                        Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
-                    </p>
+                <div class="player-card">
+                    <div>
+                        <img src="resources/images/players/player-1.png" alt="">
+                    </div>
+                    <div class="card-text">
+                        <h2> Neymar jr</h2>
+                        <p>
+                            Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
+                        </p>
+                    </div>
                 </div>
-                <div class="player-card"><img src="resources/images/players/player-2.png" alt="">
-                    <h2 class="player-card-h"> Lionel Messi </h2>
-                    <p class="player-card-p">
-                        Luis Lionel Andrés Messi; also known as Leo Messi, is an Argentine professional footballer who plays as a forward or an attacking midfielder and captains the Argentina national team.
-                    </p>
+                <div class="player-card">
+                    <div>
+                        <img src="resources/images/players/player-2.png" alt="">
+                    </div>
+                    <div class="card-text">
+                        <h2> Lionel Messi </h2>
+                        <p>
+                            Luis Lionel Andrés Messi; also known as Leo Messi, is an Argentine professional footballer who plays as a forward or an attacking midfielder and captains the Argentina national team.
+                        </p>
+                    </div>
                 </div>
-                <div class="player-card"><img src="resources/images/players/player-3.png" alt="">
-                    <h2 class="player-card-h"> Cristiano Ronaldo</h2>
-                    <p class="player-card-p">
-                        Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.
-                    </p>
+                <div class="player-card">
+                    <div>
+                        <img src="resources/images/players/player-3.png" alt="">
+                    </div>
+                    <div class="card-text">
+                        <h2> Cristiano Ronaldo</h2>
+                        <p>
+                            Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.
+                        </p>
+                    </div>
                 </div>
-                <div class="player-card"><img src="resources/images/players/player-4.png" alt="">
-                    <h2 class="player-card-h"> Paulo Dybala</h2>
-                    <p class="player-card-p">
+                <div class="player-card">
+                    <div>
+                        <img src="resources/images/players/player-4.png" alt="">
+                    </div class="card-text">
+                    <h2> Paulo Dybala</h2>
+                    <p>
                         Paulo Exequiel Dybala is an Argentine professional footballer who plays as a forward for Serie A club Juventus and the Argentina national team.
                     </p>
                 </div>
-                <div class="player-card"><img src="resources/images/players/player-5.png" alt="">
-                    <h2 class="player-card-h"> Mesut Özil</h2>
-                    <p class="player-card-p">
-                        Mesut Özil is a German professional footballer who plays as an attacking midfielder for Süper Lig club Fenerbahçe. Nicknamed "The Assist King", Özil is known for his technical skills, creativity, agility, and finesse.
-                    </p>
+                <div  class="player-card">
+                    <div>
+                        <img src="resources/images/players/player-5.png" alt="">
+                    </div>
+                    <div class="card-text">
+                        <h2> Mesut Özil</h2>
+                        <p>
+                            Mesut Özil is a German professional footballer who plays as an attacking midfielder for Süper Lig club Fenerbahçe. Nicknamed "The Assist King", Özil is known for his technical skills, creativity, agility, and finesse.
+                        </p>
+                    </div>
                 </div>
-                <div class="player-card"><img src="resources/images/players/player-6.png" alt="">
-                    <h2 class="player-card-h"> Mauro Icardi</h2>
-                    <p class="player-card-p">
-                        Mauro Emanuel Icardi is an Argentine professional footballer who plays as a striker for Ligue 1 club Paris Saint-Germain and the Argentina national team.
-                    </p>
+                <div class="player-card">
+                    <div>
+                        <img src="resources/images/players/player-6.png" alt="">
+                    </div>
+                    <div class="card-text">
+                        <h2> Mauro Icardi</h2>
+                        <p>
+                            Mauro Emanuel Icardi is an Argentine professional footballer who plays as a striker for Ligue 1 club Paris Saint-Germain and the Argentina national team.
+                        </p>
+                    </div>
                 </div>
-                <div class="player-card"><img src="resources/images/players/player-7.png" alt="">
-                    <h2 class="player-card-h"> Ángel Di María</h2>
-                    <p class="player-card-p">
-                        Ángel Fabián Di María is an Argentine professional footballer who plays for Ligue 1 club Paris Saint-Germain and the Argentina national team. He can play as either a winger or attacking midfielder.
-                    </p>
+                <div class="player-card">
+                    <div>
+                        <img src="resources/images/players/player-7.png" alt="">
+                    </div>
+                    <div class="card-text">
+                        <h2> Ángel Di María</h2>
+                        <p>
+                            Ángel Fabián Di María is an Argentine professional footballer who plays for Ligue 1 club Paris Saint-Germain and the Argentina national team. He can play as either a winger or attacking midfielder.
+                        </p>
+                    </div>
                 </div>
-                <div class="player-card"><img src="resources/images/players/player-8.png" alt="">
-                    <h2 class="player-card-h"> Kylian Mbappé </h2>
-                    <p class="player-card-p">
-                        Kylian Mbappé Lottin is a French professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the France national team.
-                    </p>
+                <div  class="player-card">
+                    <div>
+                        <img src="resources/images/players/player-8.png" alt="">
+                    </div>
+                    <div class="card-text">
+                        <h2> Kylian Mbappé </h2>
+                        <p>
+                            Kylian Mbappé Lottin is a French professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the France national team.
+                        </p>
+                    </div>
                 </div>
-                <div class="player-card"><img src="resources/images/players/player-9.png" alt="">
-                    <h2 class="player-card-h"> Mohamed Salah</h2>
-                    <p class="player-card-p">
+               <div class="player-card">
+                <div>
+                    <img src="resources/images/players/player-9.png" alt="">
+                </div>
+                <div class="card-text">
+                    <h2> Mohamed Salah</h2>
+                    <p>
                         Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer who plays as a forward for Premier League club Liverpool and captains the Egypt national team.
                     </p>
                 </div>
-                <div class="player-card"><img src="resources/images/players/player-10.png" alt="">
-                    <h2 class="player-card-h"> Harry Kane</h2>
-                    <p class="player-card-p">
-                        Harry Edward Kane MBE is an English professional footballer who plays as a striker for Premier League club Tottenham Hotspur and captains the England national team.
-                    </p>
+               </div>
+                <div class="player-card">
+                    <div>
+                        <img src="resources/images/players/player-10.png" alt="">
+                    </div>
+                    <div class="card-text">
+                        <h2> Harry Kane</h2>
+                        <p>
+                            Harry Edward Kane MBE is an English professional footballer who plays as a striker for Premier League club Tottenham Hotspur and captains the England national team.
+                        </p>
+                    </div>
                 </div>
-                <div class="player-card"><img src="resources/images/players/player-11.png" alt="">
-                    <h2 class="player-card-h"> Kevin De Bruyne</h2>
-                    <p class="player-card-p">
-                        Kevin De Bruyne is a Belgian professional footballer who plays as a midfielder for Premier League club Manchester City, where he is vice-captain, and the Belgium national team.
-                    </p>
+                <div class="player-card">
+                    <div>
+                        <img src="resources/images/players/player-11.png" alt="">
+                    </div>
+                    <div class="card-text">
+                        <h2> Kevin De Bruyne</h2>
+                        <p>
+                            Kevin De Bruyne is a Belgian professional footballer who plays as a midfielder for Premier League club Manchester City, where he is vice-captain, and the Belgium national team.
+                        </p>
+                    </div>
                 </div>
-                <div class="player-card"><img src="resources/images/players/player-12.png" alt="">
-                    <h2 class="player-card-h"> Philippe Coutinho </h2>
-                    <p class="player-card-p">
-                        Philippe Coutinho Correia is a Brazilian professional footballer who plays as an attacking midfielder or winger for Spanish club Barcelona and the Brazil national team.
-                    </p>
+                <div class="player-card">
+                    <div>
+                        <img src="resources/images/players/player-12.png" alt="">
+                    </div>
+                    <div class="card-text">
+                        <h2> Philippe Coutinho </h2>
+                        <p>
+                            Philippe Coutinho Correia is a Brazilian professional footballer who plays as an attacking midfielder or winger for Spanish club Barcelona and the Brazil national team.
+                        </p>
+                    </div>
                 </div>
+            </div>
+        </section>
+
+        <!------------------
+             Contact area 
+        -------------------->
+
+        <section class="contact-section">
+            <div class="form-div-class">
+                <form class="contact-us" >
+                    <div>
+                        <h1 class="form-head">Reach us</h1>
+                    </div>
+                    <form>
+                    <div class="form">
+                        <b>Your name:</b> <input type="text" > <br> <br>
+                        <b style="padding-left: 30px;">Email:</b> <input type="email" required> <br> <br>
+                        <b style="margin-left: -70px;">Your phone number:</b> <input type="tel" > <br> <br>
+                        <b class="querry" style="margin-left: 340px;">Write your query: </b><input style="padding: 50px 200px;" type="text-area"> <br> <br>
+                        <input class="tikbox" type="checkbox"><b>I agree all terms & conditions</b> <br> <br>
+                        <input class="submit" style="margin-left: -20px;" type="submit" placeholder="Submit">
+                    </div>
+                </form>
+            </div>
+        </section>  
+        <section>
+            <div class="google-maps">
+                <h1>Google Maps</h1>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3746841.2285154527!2d88.09988442764886!3d23.495622071966725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30adaaed80e18ba7%3A0xf2d28e0c4e1fc6b!2sBangladesh!5e0!3m2!1sen!2sbd!4v1626281871823!5m2!1sen!2sbd" width="900" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </section>
     </main>
 </body>
+
+<!-- Footer  -->
+<footer>
+    <div class="footer-image">
+        <img src="resources/images/Logo.png" alt="">
+    </div>
+    <div class="links">
+        <h1>Visit us on:</h1>
+        <div class="icons">
+        <i class="fab fa-facebook-square fa-3x"></i>
+        <i class="fab fa-whatsapp-square fa-3x"></i>
+        <i class="fab fa-twitter-square fa-3x"></i>
+        <i class="fab fa-instagram-square fa-3x"></i>
+    </div>
+</div>
+    <marquee>Copyright © 2022 Football</marquee>
+</footer>
 </html>
